Revision history for Mojo-Redis2

0.02
       * Fix the order commands are sent

0.01     Tue Aug  5 13:32:27 2014
       * Started project
       * Add blocking support
       * Add message/pmessage events for pub/sub
       * Add support for basic Redis operations
       * Add error handling
       * Can start Redis server