@@ -2,6 +2,7 @@ Revision history for Mojo-Redis2
 
 0.02
        * Fix the order commands are sent
+       * Add support for transactions
 
 0.01     Tue Aug  5 13:32:27 2014
        * Started project
